<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mygod Speech Synthesizer</string>
    <string name="input_text_default">Thanks for using Mygod Speech Synthesizer %1$s! The current version was compiled
        at %2$s %3$s.\n\nTip: For advanced styling, try enabling SsmlDroid™ in Settings.\n\nFAQ: If synthesis fails,
        check your Internet connection in case the selected engine requires Internet connection. Most TTS engines don\'t
        support all the features, e.g. Samsung TTS doesn\'t seem to support synthesizing to file. So always try
        switching to another engine when you encounter problems. You can also install engines from Play Store,
        etc.</string>
    <string name="action_synthesize_to_file">Synthesize to File</string>
    <string name="action_open">Open</string>
    <string name="action_save">Save</string>
    <string name="open_error">Open failed: %s</string>
    <string name="save_error">Save failed: %s</string>
    <string name="synthesis_error">Synthesis failed: %s</string>
    <string name="error_synthesis_in_progress">Synthesis in progress, please wait or stop current synthesis first.
    </string>
    <string name="google_translate_tts_engine_name">Google Translate TTS Engine (Online)</string>
    <string name="notification_title">Synthesizing (swipe to stop)</string>

    <string name="settings">Settings</string>
    <string name="settings_engines_languages">Engines &amp; Languages</string>
    <string name="settings_preferred_engine">Preferred engine</string>
    <string name="settings_voice">Voice</string>
    <string name="settings_tweaks">Tweaks (engine might not support)</string>
    <string name="settings_pitch">Pitch (1 for normal)</string>
    <string name="settings_speech_rate">Speech rate (1 for normal)</string>
    <string name="settings_pan">Pan (between [-1, 1]; 0 for normal)</string>
    <string name="settings_text">Text</string>
    <string name="settings_start_from">Start from</string>
    <string name="settings_ignore_single_line_break">Ignore single line breaks</string>
    <string name="settings_ignore_single_line_break_summary">Ignore the single line breaks but keep the multiple ones.</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_notification_type">Notification type</string>
    <string name="settings_show_ticker">Enable text scrolling</string>
    <string name="settings_show_ticker_summary">Scroll text that is being spoken on the status bar. (Some 5.0+ system
        might not support it)</string>
    <string name="settings_old_timey_save_ui">Old-timey save user interface</string>
    <string name="settings_old_timey_save_ui_summary">Use old-timey save user interface instead of the fancy Storage
        Access Framework in 4.4+.</string>

    <string name="title_activity_save_file">Choose save location</string>
    <string name="file_save_file_name_hint">File name</string>
    <string name="action_create_dir">Create folder</string>
    <string name="dialog_overwrite_confirm_title">Are you sure you want to overwrite this file?</string>
    <string name="dialog_create_dir_title">Enter the directory name:</string>
    <string name="action_tts_cardinal">Cardinal</string>
    <string name="action_tts_date">Date</string>
    <string name="action_tts_decimal">Decimal</string>
    <string name="action_tts_digits">Digits</string>
    <string name="action_tts_electronic">Electronic</string>
    <string name="action_tts_fraction">Fraction</string>
    <string name="action_tts_measure">Measure</string>
    <string name="action_tts_money">Money</string>
    <string name="action_tts_ordinal">Ordinal</string>
    <string name="action_tts_telephone">Telephone</string>
    <string name="action_tts_text">Text</string>
    <string name="action_tts_time">Time</string>
    <string name="action_tts_verbatim">Verbatim</string>
    <string name="action_tts_generic_attributes">Generic attributes…</string>
    <string name="action_tts_generic_attributes_gender">Gender…</string>
    <string name="action_tts_generic_attributes_gender_neutral">Neutral</string>
    <string name="action_tts_generic_attributes_gender_male">Male</string>
    <string name="action_tts_generic_attributes_gender_female">Female</string>
    <string name="action_tts_generic_attributes_animacy">Animacy…</string>
    <string name="action_tts_generic_attributes_animacy_animate">Animate</string>
    <string name="action_tts_generic_attributes_animacy_inanimate">Inanimate</string>
    <string name="action_tts_generic_attributes_multiplicity">Multiplicity…</string>
    <string name="action_tts_generic_attributes_multiplicity_single">Single</string>
    <string name="action_tts_generic_attributes_multiplicity_dual">Dual</string>
    <string name="action_tts_generic_attributes_multiplicity_plural">Plural</string>
    <string name="action_tts_generic_attributes_case">Case…</string>
    <string name="action_tts_generic_attributes_case_nominative">Nominative</string>
    <string name="action_tts_generic_attributes_case_accusative">Accusative</string>
    <string name="action_tts_generic_attributes_case_dative">Dative</string>
    <string name="action_tts_generic_attributes_case_ablative">Ablative</string>
    <string name="action_tts_generic_attributes_case_genitive">Genitive</string>
    <string name="action_tts_generic_attributes_case_vocative">Vocative</string>
    <string name="action_tts_generic_attributes_case_locative">Locative</string>
    <string name="action_tts_generic_attributes_case_instrumental">Instrumental</string>
    <string name="action_tts_earcon">Earcon</string>
    <string name="action_style">Style…</string>
    <string name="action_tts_number_toast">Enter the number to be synthesized.</string>
    <string name="action_tts_date_toast">Enter at least two of the fields.</string>
    <string name="action_tts_decimal_toast">Enter the integer part and the fractional part of the decimal.</string>
    <string name="action_tts_digits_toast">If you want to read the digits inside the tag, remove digits/@digits.
        Otherwise, enter the digits that have to be read sequentially.
    </string>
    <string name="action_tts_digits_toast_empty">Enter the digits that have to be read sequentially.</string>
    <string name="action_tts_fraction_toast">Enter the numerator and denominator of the fraction. The integer part of it
        is optional.
    </string>
    <string name="action_tts_electronic_toast">Enter at least one of the field.</string>
    <string name="action_tts_measure_toast">Enter a cardinal, decimal or a fraction and the unit of the measure
        specified in English singular form.
    </string>
    <string name="action_tts_money_toast">Enter a decimal and an ISO4217 currency code (e.g. USD). Quantity is
        optional.
    </string>
    <string name="action_tts_telephone_toast">Enter the main number part of the telephone number. Country code and
        extension part of it is optional.
    </string>
    <string name="action_tts_text_toast_empty">Enter the text to be synthesized.</string>
    <string name="action_tts_text_toast">If you want to read the text in the tag, remove text/@text. Otherwise, enter
        the text to be synthesized.
    </string>
    <string name="action_tts_time_toast">Enter the hours and minutes of the time.</string>
    <string name="action_tts_verbatim_toast">Enter the text where the characters are read verbatim, except whitespace.
    </string>
    <string name="settings_latency">Latency: %d</string>
    <string name="settings_latency_very_low">Very low expected synthesizer latency (&lt; 20ms)</string>
    <string name="settings_latency_low">Low expected synthesizer latency (~20ms)</string>
    <string name="settings_latency_normal">Normal expected synthesizer latency (~50ms)</string>
    <string name="settings_latency_high">Network based expected synthesizer latency (~200ms)</string>
    <string name="settings_latency_very_high">Very slow network based expected synthesizer latency (> 200ms)</string>
    <string name="settings_quality">Quality: %d</string>
    <string name="settings_quality_very_low">Very low, but still intelligible quality of speech synthesis</string>
    <string name="settings_quality_low">Low, not human-like quality of speech synthesis</string>
    <string name="settings_quality_normal">Normal quality of speech synthesis</string>
    <string name="settings_quality_high">High, human-like quality of speech synthesis</string>
    <string name="settings_quality_very_high">Very high, almost human-indistinguishable quality of speech synthesis
    </string>
    <string name="settings_voice_information">\nLanguage: %1$s\n%2$s\n%3$s</string>
    <string name="settings_voice_information_unsupported_features">"\nUnsupported features: "</string>
    <string name="settings_voice_information_not_installed">\nAdditional data needed downloading</string>
    <string name="settings_voice_information_network_connection_required">\nNetwork connection required</string>
    <string name="settings_enable_ssmldroid">Enable SsmlDroid™</string>
    <string name="settings_enable_ssmldroid_summary">Enable SsmlDroid™ which enables you to apply styles to the text.
    </string>
    <string name="settings_ssmldroid_user_guidelines">SsmlDroid™ User Guidelines</string>
    <string name="url_ssmldroid_user_guidelines">
        https://github.com/Mygod/MygodSpeechSynthesizer/wiki/SsmlDroid™-User-Guidelines
    </string>

</resources>