<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/settings">
    <PreferenceCategory android:title="@string/settings_engines_languages">
        <tk.mygod.preference.IconListPreference android:key="engine" android:title="@string/settings_preferred_engine"
                                                android:summary="%s"/>
        <tk.mygod.preference.IconListPreference android:key="engine.voice" android:title="@string/settings_voice"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_tweaks">
        <tk.mygod.preference.EditTextValueAsSummaryPreference android:key="tweaks.pitch" android:defaultValue="1"
                                                              android:title="@string/settings_pitch"
                                                              android:inputType="numberDecimal|numberSigned"/>
        <tk.mygod.preference.EditTextValueAsSummaryPreference android:key="tweaks.speechRate" android:defaultValue="1"
                                                              android:title="@string/settings_speech_rate"
                                                              android:inputType="numberDecimal|numberSigned"/>
        <tk.mygod.preference.EditTextValueAsSummaryPreference android:key="tweaks.pan" android:defaultValue="0"
                                                              android:title="@string/settings_pan"
                                                              android:inputType="numberDecimal|numberSigned"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_text">
        <ListPreference android:key="text.start" android:summary="%s" android:defaultValue="beginning"
                        android:title="@string/settings_start_from" android:entries="@array/settings_start_from"
                        android:entryValues="@array/settings_start_from_values"/>
        <CheckBoxPreference android:key="text.ignoreSingleLineBreak"
                            android:title="@string/settings_ignore_single_line_break"
                            android:summary="@string/settings_ignore_single_line_break_summary"/>
        <CheckBoxPreference android:key="text.enableSsmlDroid" android:title="@string/settings_enable_ssmldroid"
                            android:summary="@string/settings_enable_ssmldroid_summary"/>
        <Preference android:key="ssmlDroid.userGuidelines" android:title="@string/settings_ssmldroid_user_guidelines"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_appearance">
        <ListPreference android:key="appearance.notificationType" android:summary="%s" android:defaultValue="0"
                        android:entries="@array/settings_notification_type"
                        android:entryValues="@array/settings_notification_type_values"
                        android:title="@string/settings_notification_type"/>
        <CheckBoxPreference android:key="appearance.ticker" android:title="@string/settings_show_ticker"
                            android:summary="@string/settings_show_ticker_summary"/>
        <CheckBoxPreference android:key="appearance.oldTimeySaveUI" android:title="@string/settings_old_timey_save_ui"
                            android:summary="@string/settings_old_timey_save_ui_summary"
                            android:enabled="@bool/kitkat" android:defaultValue="@bool/not_kitkat" />
    </PreferenceCategory>
</PreferenceScreen>